- Fixed Chips layout issue in Project section.

--- a/components/Home/Portfolio/Styles.module.scss
+++ b/components/Home/Portfolio/Styles.module.scss
@@ -144,7 +144,7 @@
           }
 
           .projectInfo {
-            padding: 1rem 2rem;
+            padding: 1rem 2rem 0;
             display: flex;
             flex-direction: column;
 
@@ -165,6 +165,10 @@
               }
             }
 
+            .description {
+              margin: 0
+            }
+
             .openInNewButton {
               margin-left: 1rem;
 
@@ -176,18 +180,22 @@
             .alert {
               margin-bottom: 16px;
             }
+          }
 
-            .tagsContainer {
-              margin-top: 1rem;
-              display: flex;
-              flex-wrap: wrap;
+          .tagsContainer {
+            padding: 1rem 2rem;
+            display: flex;
+            flex-wrap: wrap;
 
-              .tags {
-                max-width: 100%;
-                margin-right: .5rem;
-                margin-bottom: .5rem;
-                font-size: 14px;
-              }
+            .title {
+              width: 100%;
+            }
+
+            .tags {
+              max-width: 100%;
+              margin-right: .5rem;
+              margin-bottom: .5rem;
+              font-size: 14px;
             }
           }
         }
